--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="bookmark_logo.png" alt="" width="200" >     </img>
+      <img src="supermark_both.png" alt="" width="200" >     </img>
 
       <span class ='text-white' id="message" hidden></span>
       <a target="_blank" rel="noopener" href="http://localhost:3000/signin">
