--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body id="body">
-    <div class="container">
+    <div class="container" id="container">
       <img src="supermark_both.png" alt="" width="200" />
 
       <!--   for (let i = 0; i < folders.length; i++) {
@@ -27,10 +27,10 @@
         </button>
       </div>
 
-      <div class="text-white">Selected Folder:</div>
-      <div class="select-menu" class="margin-bottom-20">
-        <div class="select-btn" id="select-btn">
-          <span class="sBtn-text" id="sBtn-text">Folders</span>
+      <div class="text-white" id="prompt" hidden>Selected Folder:</div>
+      <div class="select-menu" class="margin-bottom-20" id="select_menu" hidden >
+        <div class="select-btn" id="select-btn" >
+          <span class="sBtn-text" id="sBtn-text" >Folders</span>
           <svg role="img" viewBox="0 0 512 512">
             <path
               d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
