--- a/extension/popup.html
+++ b/extension/popup.html
@@ -17,27 +17,34 @@
   } -->
       <span class="text-white" id="message" hidden></span>
       <a target="_blank" rel="noopener" href="http://localhost:3000/login">
-        <button class="grow press" id="signin">
+        <button class="grow press button-primary" id="signin">
           Sign in &#x2197
         </button>
       </a>
       <div class="flex">
-        <button class="grow press" hidden id="extractButton">
+        <div class="select-menu" class="margin-bottom-20" id="select_menu" hidden >
+          <div class="select-btn" id="select-btn" >
+            <span class="sBtn-text" id="sBtn-text" >Folders</span>
+            <svg role="img" viewBox="0 0 512 512">
+              <path
+                d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
+              />
+            </svg>
+          </div>
+          <ul class="options" id="options"></ul>
+        </div>
+        <button class="grow press button-primary" hidden id="extractButton">
           Add to AI Bookmarks!
         </button>
       </div>
 
       <div class="text-white" id="prompt" hidden>Selected Folder:</div>
-      <div class="select-menu" class="margin-bottom-20" id="select_menu" hidden >
-        <div class="select-btn" id="select-btn" >
-          <span class="sBtn-text" id="sBtn-text" >Folders</span>
-          <svg role="img" viewBox="0 0 512 512">
-            <path
-              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
-            />
-          </svg>
+      <div>
+        <div class="button-primary button-secondary grow press">
+          <a class="text-white" href="http://localhost:3000">
+            Chat with Bookmarks
+          </a>
         </div>
-        <ul class="options" id="options"></ul>
       </div>
 
       <script src="popup.js"></script>
