--- a/extension/popup.html
+++ b/extension/popup.html
@@ -34,14 +34,14 @@
           <ul class="options" id="options"></ul>
         </div>
         <button class="grow press button-primary" hidden id="extractButton">
-          Add to AI Bookmarks!
+          Add to Bookmarks
         </button>
       </div>
 
       <div class="text-white" id="prompt" hidden>Selected Folder:</div>
       <div>
         <div class="button-primary button-secondary grow press">
-          <a class="text-white" href="http://localhost:3000">
+          <a class="text-white" href="https://app.supermark.ai/" target="_blank">
             Chat with Bookmarks
           </a>
         </div>
