--- a/extension/popup.html
+++ b/extension/popup.html
@@ -48,6 +48,7 @@
       </div>
 
       <script src="popup.js"></script>
+      <script src="config.js"></script>
     </div>
     <script src="pdfjs/build/pdf.js"></script>
     <script src="pdfjs/build/pdf.worker.js"></script>
