integrate prod build

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -16,7 +16,7 @@
     folderList.appendChild(li);
   } -->
       <span class="text-white" id="message" hidden></span>
-      <a target="_blank" rel="noopener" href="http://localhost:3000/login">
+      <a target="_blank" rel="noopener" href="https://app.supermark.ai/">
         <button class="grow press button-primary" id="signin">
           Sign in &#x2197
         </button>
