--- a/express/site.html
+++ b/express/site.html
@@ -30,7 +30,7 @@
             
  
  
-        <script type="text/javascript" src="/eurlex-frontoffice/ruxitagentjs_ICA2NVfgjqrux_10247220811100421.js" data-dtconfig="app=47d4c64c3b67ec69|agentId=95fe69682048d410|featureHash=ICA2NVfgjqrux|vcv=2|rdnt=1|uxrgce=1|bp=3|cuc=m097nmfl|mel=100000|mb=null|dpvc=1|iub=null|ssv=4|lastModification=1688151055695|dtVersion=10247220811100421|tp=500,50,0,1|agentUri=/eurlex-frontoffice/ruxitagentjs_ICA2NVfgjqrux_10247220811100421.js|reportUrl=/eurlex-frontoffice/rb_39a3e95b-5423-482c-879b-99ef235dffeb|rid=RID_-1722221659|rpid=1836934665|domain=europa.eu"></script><script type="text/javascript" src="./../../../revamp/components/vendor/modernizr/modernizr.js?v=2.11.5"></script>
+        <script type="text/javascript" src="/ruxitagentjs_ICA2NVfgjqrux_10247220811100421.js" data-dtconfig="app=47d4c64c3b67ec69|agentId=17b413e4993ec23d|featureHash=ICA2NVfgjqrux|vcv=2|rdnt=1|uxrgce=1|bp=3|cuc=m097nmfl|mel=100000|mb=null|dpvc=1|iub=null|ssv=4|lastModification=1688151055695|dtVersion=10247220811100421|tp=500,50,0,1|agentUri=/ruxitagentjs_ICA2NVfgjqrux_10247220811100421.js|reportUrl=/rb_39a3e95b-5423-482c-879b-99ef235dffeb|rid=RID_-1722221659|rpid=-376628715|domain=europa.eu"></script><script type="text/javascript" src="./../../../revamp/components/vendor/modernizr/modernizr.js?v=2.11.5"></script>
         
  
 
@@ -2045,7 +2045,7 @@
 				</button>
 				<label class="GroupCheckLabel noBorder radius5p">
 					<input id="ef-checkbox" name="experimentalFeaturesActivated" class="experimental-feature-checkbox" title="Enable / Disable all experimental features" onclick="this.form.submit();" autocomplete="on" type="checkbox" value="true"/><input type="hidden" name="_experimentalFeaturesActivated" value="on"/>	</label>	</div>	<div>
-<input type="hidden" name="_csrf" value="407afd9d-5246-49c9-88f9-48510669a49c" />
+<input type="hidden" name="_csrf" value="4095b185-fcaa-499d-828d-17c1c366d03d" />
 </div></form>	<form id="applyExperimentalFeatures" name="applyExperimentalFeatures" action="./../../../experimental-features.html?action=applyExperimentalFeatures" method="post">
 			<input type="hidden" value="legal-content/EN/TXT/" name="relativeRequestUrl" />
 			<input type="hidden" value="?uri=CELEX%3A32021R0697" name="queryString" />
@@ -2082,7 +2082,7 @@
 					</div>
 					<div>
 						<button  id="exp-feature-btn-apply" type="submit" class="btn btn-sm btn-primary radius5p"> Apply	</button>	</div>	</div>	</div>	<div>
-<input type="hidden" name="_csrf" value="407afd9d-5246-49c9-88f9-48510669a49c" />
+<input type="hidden" name="_csrf" value="4095b185-fcaa-499d-828d-17c1c366d03d" />
 </div></form>	
 
 
@@ -2662,7 +2662,7 @@
 	
 				<div class="DistinctiveFormMessage EurlexTooltip" tabindex="0" data-toggle="tooltip" title="Please clear the other quick search options before using this one"></div>	
 			<div>
-<input type="hidden" name="_csrf" value="407afd9d-5246-49c9-88f9-48510669a49c" />
+<input type="hidden" name="_csrf" value="4095b185-fcaa-499d-828d-17c1c366d03d" />
 </div></form>
 	
 			<div class="QuickSearchOptions fade sr-only">
@@ -4741,7 +4741,7 @@
                class="form-inline"
                id="form"
                name="multilingualForm"
-               method="post"><input type="hidden" name="_csrf" value="407afd9d-5246-49c9-88f9-48510669a49c" /><input type="hidden" name="from" value="EN"/>
+               method="post"><input type="hidden" name="_csrf" value="4095b185-fcaa-499d-828d-17c1c366d03d" /><input type="hidden" name="from" value="EN"/>
             <div class="form-group">
                <label for="MDLang1" class="sr-only">Language 1 </label>
                <select id="MDLang1" name="lang1" class="input-sm form-control NoBorders">
