readability-web-clipper

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -41,11 +41,16 @@
       <div class="text-white" id="prompt" hidden>Selected Folder:</div>
       <div>
         <div class="button-primary button-secondary grow press">
-          <a class="text-white" href="https://app.supermark.ai/" target="_blank">
+          <a class="text-white" href="https://app.supermark.ai/chat" target="_blank">
             Chat with Bookmarks
           </a>
         </div>
       </div>
+      <!-- <div>
+          <button class="grow press button-primary" id="simplify-button">
+            Simplify article
+          </button>
+      </div> -->
 
       <script src="popup.js"></script>
     </div>
